Assignment 1 fixing broken css, adding about page

--- a/web/indexStyle.css
+++ b/web/indexStyle.css
@@ -1,7 +1,6 @@
-body {
+.body {
     background-color: lightgray;
 }
-
 .header {
     background-color: cornflowerblue;
     border-bottom-style: solid;
